objects/Call_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Actions_to_Key_Beliefs__c</fullName>
        <description>What will we do to address and satisfy the key beliefs?</description>
        <inlineHelpText>What will we do to address and satisfy the key beliefs?</inlineHelpText>
        <label>Actions to Key Beliefs</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Adequate_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adequate Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agenda__c</fullName>
        <description>What is the high level agenda for the meeting?</description>
        <inlineHelpText>What is the high level agenda for the meeting?</inlineHelpText>
        <label>Agenda</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Call_Plan_Type__c</fullName>
        <label>Call Plan Type</label>
        <picklist>
            <picklistValues>
                <fullName>Phone call (conference line)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone conference with Halo type engagement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live F2F meeting (one on one)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live F2F meeting (one to many – multiple clients)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live F2F meeting (Multiple HP/multiple clients)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Participants__c</fullName>
        <label>Customer Participants</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_attending_meeting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer attending meeting?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duration_of_Call__c</fullName>
        <label>Duration of Call</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_In_Mind__c</fullName>
        <inlineHelpText>What needs to be accomplished by the end of the meeting?</inlineHelpText>
        <label>Meeting Objectives</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_of_Meeting_Dialog__c</fullName>
        <label>End of Meeting Dialog</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Environment_Appropriate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Environment Appropriate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HP_Participants__c</fullName>
        <label>HP Participants</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Intent__c</fullName>
        <label>Intent</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Introduction__c</fullName>
        <label>Introduction</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Key_Beliefs__c</fullName>
        <inlineHelpText>What key beliefs must the customer hold to agree with the objectives?</inlineHelpText>
        <label>Key Beliefs</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Meeting_Date__c</fullName>
        <label>Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <label>Next Steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Plan__c</fullName>
        <label>Opportunity Plan</label>
        <referenceTo>Opportunity_Plan__c</referenceTo>
        <relationshipLabel>Call Plans</relationshipLabel>
        <relationshipName>Call_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Putting_it_all_together__c</fullName>
        <inlineHelpText>What will be said to open the meeting succinctly with the customer to gain their interest, engagement and agreement that this is a useful spend of their time?</inlineHelpText>
        <label>Managing the High Risk</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question_or_Objection__c</fullName>
        <label>Question or Objection</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Questions__c</fullName>
        <label>Questions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Right_Expectations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Right Expectations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Roles_and_Responsibilities__c</fullName>
        <label>Roles and Responsibilities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Support_EIM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Support EIM?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Topics_issues_questions__c</fullName>
        <label>Topics, issues, questions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Value_Proposition__c</fullName>
        <inlineHelpText>Articulate customer view of the Opportunity</inlineHelpText>
        <label>Customer View of the Opportunity</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Call Plan</label>
    <nameField>
        <label>Call Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Call Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Duration_cannot_be_Negative</fullName>
        <active>true</active>
        <errorConditionFormula>Duration_of_Call__c &lt;0</errorConditionFormula>
        <errorMessage>Duration should be a positive value.</errorMessage>
    </validationRules>
</CustomObject>